# mempalace-Rust

./: CHANGES-v3.md  Cargo.toml  LICENSE  PROJECT_SUMMARY.md  README.md  SKILL.md  USAGE.md  start.bat
src/: config.rs  main.rs
src/cli/: compress.rs  init.rs  mine.rs  mod.rs  repair.rs  search.rs  split.rs  status.rs  wakeup.rs
src/dialect/: compressor.rs  emotion_codes.rs  entity_codes.rs  mod.rs
src/entity/: detector.rs  mod.rs  registry.rs
src/knowledge_graph/: edge.rs  graph.rs  mod.rs  node.rs
src/layers/: layer0.rs  layer1.rs  layer2.rs  mod.rs
src/mcp/: mod.rs  protocol.rs  tools.rs
src/miner/: convo.rs  general.rs  mod.rs
src/room/: mod.rs
src/search/: filters.rs  mod.rs  ranking.rs
src/storage/: embedding.rs  mod.rs  vector_store.rs
src/utils/: mod.rs  normalize.rs  spellcheck.rs
