[package]
name = "mempalace"
version = "3.0.0-v3"
edition = "2021"
authors = ["milla-jovovich"]
description = "Give your AI a memory — mine projects and conversations into a searchable palace. No API key required."
license = "MIT"
repository = "https://github.com/milla-jovovich/mempalace"
keywords = ["ai", "memory", "llm", "rag", "vector-database", "mcp", "embeddings"]
categories = ["command-line-utilities", "science"]
rust-version = "1.70"

[[bin]]
name = "mempalace"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"

# CLI
clap = { version = "4.4", features = ["derive", "env"] }
console = "0.15"
indicatif = "0.17"
dialoguer = "0.11"
colored = "2.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
yaml-rust2 = "0.8"

# Database & Storage
rusqlite = { version = "0.30", features = ["bundled", "chrono", "serde_json", "uuid"] }
redb = "1.5"

# Vector search
ndarray = { version = "0.15", features = ["serde"] }
rayon = "1.8"

# Embeddings - simplified implementation without external ML libraries
# For production, you can integrate with external embedding services

# HTTP/API
axum = "0.7"
tower = "0.4"
tower-http = "0.5"
hyper = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }

# MCP (Model Context Protocol)
# We'll implement MCP protocol manually

# File system
walkdir = "2.4"
ignore = "0.4"
memmap2 = "0.9"

# Text processing
regex = "1.10"
unicode-segmentation = "1.11"
unicode-normalization = "0.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Hashing
blake3 = "1.5"
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# Compression
zstd = "0.13"

# Utilities
itertools = "0.12"
dashmap = "5.5"
parking_lot = "0.12"
once_cell = "1.19"
dirs = "5.0"

[dev-dependencies]
tempfile = "3.9"
criterion = { version = "0.5", features = ["html_reports"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
